@@ -16,6 +16,7 @@
 package com.google.j2cl.transpiler.backend.wasm;
 
 import static com.google.common.collect.ImmutableMap.toImmutableMap;
+import static com.google.j2cl.transpiler.backend.wasm.WasmGenerationEnvironment.getWasmInfo;
 import static java.util.Comparator.comparing;
 
 import com.google.auto.value.AutoValue;
@@ -206,12 +207,13 @@ public final class JsImportsGenerator {
     }
     if (methodImport.isPropertySetter()) {
       sb.append(" = ");
-      sb.append(methodImport.getParameters().get(0).getName());
+      sb.append(methodImport.getParameters().getFirst().getName());
       return sb.toString();
     }
     sb.append("(");
     for (var parameter : methodImport.getParameters()) {
-      sb.append(parameter.getName() + ", ");
+      sb.append(parameter.getName());
+      sb.append(", ");
     }
     sb.append(")");
     return sb.toString();
@@ -288,10 +290,9 @@ public final class JsImportsGenerator {
     }
 
     private void collectModuleImports(TypeDescriptor typeDescriptor) {
-      if (!(typeDescriptor instanceof DeclaredTypeDescriptor)) {
+      if (!(typeDescriptor instanceof DeclaredTypeDescriptor declaredTypeDescriptor)) {
         return;
       }
-      DeclaredTypeDescriptor declaredTypeDescriptor = (DeclaredTypeDescriptor) typeDescriptor;
       TypeDeclaration typeDeclaration = declaredTypeDescriptor.getTypeDeclaration();
       if (!typeDeclaration.isNative() || typeDeclaration.isExtern()) {
         return;
@@ -338,7 +339,7 @@ public final class JsImportsGenerator {
       return false;
     }
     // If the method maps to a WASM instruction, that takes precedence.
-    if (methodDescriptor.getWasmInfo() != null) {
+    if (getWasmInfo(methodDescriptor) != null) {
       return false;
     }
     return true;
